fix #63 dropdown menu, TODO: dropdown z-index

--- a/app/styles/hack.styl
+++ b/app/styles/hack.styl
@@ -33,12 +33,14 @@ body
   a.item
     color #ccc!important
     text-shadow 0 0 1px rgba(255,255,255,0.3)
+    /* disable for dropdown menu
     &:hover
       color #fff!important
       text-shadow 0 0px 16px rgba(128,128,128,1)
       background-color rgba(255,255,255,0.1)
+    */
   .container
-    width 940px
+    width 1080px
     margin 0 auto
 .ui.menu .build-id
   margin-top 10px
